add get audit status api
